alignment on stuff is a bit wonky, but basic hide/show of messagebar for issue #14 works.

--- a/feedeater/display/static/css/main.css
+++ b/feedeater/display/static/css/main.css
@@ -280,3 +280,9 @@ img {
 .msgbarmin {
     background-color: #eeeeee;
 }
+
+.pbar_min {
+    width: 100%;
+    align-content: center;
+    margin-left: 30px;
+}
